# nd2k

./: .gitignore  Containerfile  MIT-LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
nd2k/: __init__.py  exchange.py  formatter.py  main.py  nontrade.py  operation.py  queries.py  swap.py  trade.py  transaction.py  types.py  utils.py
nd2k/converter/: __init__.py  combine_by_timestamp.py  combine_groups.py  group_similar.py  organize_rows.py
tests/: helpers.py  test_main.py  test_queries.py  test_utils.py
tests/functional/: novadax_to_koinly.feature  test_novadax_to_koinly.py
tests/regression/: test_issue_08.py
tests/sample_data/: koinly_non_trades.csv  koinly_trades.csv  novadax.csv
tests/unit/: helpers.py  test_exchange.py  test_formatter.py  test_main.py  test_nontrade.py  test_operation.py  test_queries.py  test_swap.py  test_trade.py  test_utils.py
tests/unit/converter/: test_combine_by_timestamp.py  test_organize_rows.py
